2016-11-16 Franz Holzinger <franz@ttproducts.de>
	* bugfix: Check if the table sys_dmail_category exists before its TCA is added. Otherwise the LIST module will produce SQL errors.

2016-08-31 Franz Holzinger <franz@ttproducts.de>
	* bugfix: text and blob must have a default null value by TCA and not by SQL

2016-08-23 Franz Holzinger <franz@ttproducts.de>
	* bugfix: Setfixed needs the read in original array in order to generated the authorization key by the user group. It must not be cleared.
	* bugfix: Support STRICT mysql mode STRICT_ALL_TABLES and STRICT_TRANS_TABLES.
	  Add default NULL values to tinytext, text and blob
	* bugfix: TYPO3 does not support the compatVersion in the setup. Users of TYPO3 4.5 must add the additional setup for Agency Registration compatibility TYPO3 4.5

2016-07-30 Franz Holzinger <franz@ttproducts.de>
	* fix bugs for PHP 7
	* make the securedFieldArray static because they should not be changed dynamically

2016-07-29 Franz Holzinger <franz@ttproducts.de>
	* fix bug #77211: The password field on the edit form must not be prefilled by Firefox or other browsers

2016-07-25 Franz Holzinger <franz@ttproducts.de>
	* fix bug #77232: bugfix for PHP 7.x. replace all tx_div2007_alpha class methods by corresponding tx_div2007_alpha5 methods
	* suggestion for bug #77217: set keepUnselectableUserGroups to 1 by default

2016-07-23 Franz Holzinger <franz@ttproducts.de>
	* restructuring: move constants.txt and setup.txt from folder static into /Configuration/TypoScript/PluginSetup/
	* restructuring: copy files  pi/class.tx_agency_pi_base.php and control/class.tx_agency_control_main.php into Classes/Controller/RegisterPluginController.php, Classes/Controller/InitializationController.php and Classes/Configuration/ConfigurationCheck.php.
	* fix bug #77229: use the newer class tx_div2007_alpha5::getSetupOrFFvalue_fh004 instead of tx_div2007_alpha::getSetupOrFFvalue_fh002 .

2016-06-18 Franz Holzinger <franz@ttproducts.de>