@@ -26,6 +26,7 @@ CREATE TABLE fe_users (
 	by_invitation tinyint(4) unsigned DEFAULT '0' NOT NULL,
 	module_sys_dmail_html tinyint(3) unsigned DEFAULT '0' NOT NULL,
 	terms_acknowledged tinyint(4) unsigned DEFAULT '0' NOT NULL,
+	has_privileges tinyint(4) unsigned DEFAULT '0' NOT NULL,
 	token varchar(32) DEFAULT '' NOT NULL,
 	tx_agency_password blob,
 	lost_password tinyint(4) unsigned DEFAULT '0' NOT NULL,
