@@ -48,6 +48,7 @@
             <label index="fe_users.token">Security Token</label>
 			<label index="fe_users.tx_agency_password">Encrypted auto-login password</label>
 			<label index="fe_users.lost_password">Password is lost</label>
+            <label index="fe_users.has_privileges">Has privileges:</label>
             <label index="fe_groups_language_overlay">User Group Alternative Language</label>
             <label index="fe_groups_language_overlay.title">Translated user group name</label>
             <label index="sys_agency_fe_users_limit_fe_groups">Relation FE users to FE groups</label>
