@@ -352,6 +352,21 @@
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_email### -->
 
+	<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+	<dt>
+		<label for="agency-has_privileges">###LABEL_HAS_PRIVILEGES### ###REQUIRED_EMAIL_HAS_PRIVILEGES###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_ERROR_FIELD_has_privileges### -->
+		<p class="agency-error">###EVAL_ERROR_FIELD_has_privileges###</p>
+		<!-- ###SUB_ERROR_FIELD_has_privileges### -->
+		<!-- ###SUB_REQUIRED_FIELD_has_privileges### -->
+		<p class="agency-error">###MISSING_HAS_PRIVILEGES###</p>
+		<!-- ###SUB_REQUIRED_FIELD_has_privileges### -->
+		###TCA_INPUT_has_privileges###
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 	<dt>
 		<label for="agency-usergroup" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_USERGROUP### ###REQUIRED_USERGROUP###</label>
@@ -611,6 +626,11 @@
 <dt>###LABEL_EMAIL###</dt>
 <dd>###FIELD_email###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_email### -->
+
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+<dt>###LABEL_HAS_PRIVILEGES###</dt>
+<dd>###TCA_INPUT_has_privileges###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
 
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 <dt>###LABEL_USERGROUP###</dt>
@@ -1052,6 +1072,21 @@ The user is informed that a message has been sent to his email address and that 
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_email### -->
 
+	<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+	<dt>
+		<label for="agency-has_privileges">###LABEL_HAS_PRIVILEGES### ###REQUIRED_EMAIL_HAS_PRIVILEGES###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_ERROR_FIELD_has_privileges### -->
+		<p class="agency-error">###EVAL_ERROR_FIELD_has_privileges###</p>
+		<!-- ###SUB_ERROR_FIELD_has_privileges### -->
+		<!-- ###SUB_REQUIRED_FIELD_has_privileges### -->
+		<p class="agency-error">###MISSING_HAS_PRIVILEGES###</p>
+		<!-- ###SUB_REQUIRED_FIELD_has_privileges### -->
+		###TCA_INPUT_has_privileges###
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 	<dt>
 		<label for="agency-usergroup" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_USERGROUP### ###REQUIRED_USERGROUP###</label>
@@ -1282,6 +1317,11 @@ The user is informed that a message has been sent to his email address and that 
 <dt>###LABEL_EMAIL###</dt>
 <dd>###FIELD_email###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_email### -->
+
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+<dt>###LABEL_HAS_PRIVILEGES###</dt>
+<dd>###FIELD_has_privileges###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
 
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 <dt>###LABEL_USERGROUP###</dt>
@@ -1662,6 +1702,21 @@ The user is informed that a message has been sent to the email address and that 
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_email### -->
 
+	<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+	<dt>
+		<label for="agency-has_privileges">###LABEL_HAS_PRIVILEGES### ###REQUIRED_EMAIL_HAS_PRIVILEGES###</label>
+	</dt>
+	<dd>
+		<!-- ###SUB_ERROR_FIELD_has_privileges### -->
+		<p class="agency-error">###EVAL_ERROR_FIELD_has_privileges###</p>
+		<!-- ###SUB_ERROR_FIELD_has_privileges### -->
+		<!-- ###SUB_REQUIRED_FIELD_has_privileges### -->
+		<p class="agency-error">###MISSING_HAS_PRIVILEGES###</p>
+		<!-- ###SUB_REQUIRED_FIELD_has_privileges### -->
+		###TCA_INPUT_has_privileges###
+	</dd>
+	<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+
 	<!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 	<dt>
 		<label for="agency-usergroup" onclick="document.getElementById(this.htmlFor).focus(); return false;">###LABEL_USERGROUP### ###REQUIRED_USERGROUP###</label>
@@ -1923,6 +1978,11 @@ The user is informed that a message has been sent to the email address and that 
 <dt> ###LABEL_EMAIL###</dt>
 <dd> ###FIELD_email###&nbsp;</dd>
 <!-- ###SUB_INCLUDED_FIELD_email### -->
+
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+<dt>###LABEL_HAS_PRIVILEGES###</dt>
+<dd>###TCA_INPUT_has_privileges###&nbsp;</dd>
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
 
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 <dt>###LABEL_USERGROUP###</dt>
@@ -2417,6 +2477,9 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_FAX###: ###FIELD_fax###
 <!-- ###SUB_INCLUDED_FIELD_fax### -->
 ###LABEL_EMAIL###: ###FIELD_email###
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+###LABEL_HAS_PRIVILEGES###: ###FIELD_has_privileges###
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 ###LABEL_USERGROUP###:
 ###TCA_INPUT_usergroup###
@@ -2564,6 +2627,9 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_FAX###: ###FIELD_fax###
 <!-- ###SUB_INCLUDED_FIELD_fax### -->
 ###LABEL_EMAIL###: ###FIELD_email###
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+###LABEL_HAS_PRIVILEGES###: ###FIELD_has_privileges###
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 ###LABEL_USERGROUP###:
 ###TCA_INPUT_usergroup###
@@ -2902,6 +2968,11 @@ The user is informed that a message has been sent to the email address and that 
 <dd>###FIELD_email###</dd>
 <!-- ###SUB_INCLUDED_FIELD_email### -->
 
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+<dt>###LABEL_HAS_PRIVILEGES###</dt>
+<dd>###TCA_INPUT_has_privileges###</dd>
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 <dt>###LABEL_USERGROUP###</dt>
 <dd>###TCA_INPUT_usergroup###</dd>
@@ -3028,6 +3099,10 @@ The user is informed that a message has been sent to the email address and that 
 <!-- ###SUB_INCLUDED_FIELD_email### -->
 ###LABEL_EMAIL###: ###FIELD_email###
 <!-- ###SUB_INCLUDED_FIELD_email### -->
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
+###LABEL_HAS_PRIVILEGES###:
+###TCA_INPUT_has_privileges###
+<!-- ###SUB_INCLUDED_FIELD_has_privileges### -->
 <!-- ###SUB_INCLUDED_FIELD_usergroup### -->
 ###LABEL_USERGROUP###:
 ###TCA_INPUT_usergroup###
